--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <div class="container mx-auto px-6">
                 <div class="grid md:grid-cols-2 gap-16 items-center">
                     <div class="flex justify-center items-center">
-                        <img src="https://placehold.co/320x320/E0E7FF/4F46E5?text=Elijah+Ting" alt="Portrait of Elijah Ting" class="w-80 h-80 rounded-full object-cover border-4 border-white shadow-xl"> 
+                        <img src="assets/images/profile-photo.jpg" alt="Portrait of Elijah Ting" class="w-80 h-80 rounded-full object-cover border-4 border-white shadow-xl"> 
                     </div>
                     <div>
                         <h2 class="text-3xl font-bold text-gray-900 mb-4">Who is Elijah?</h2>
@@ -148,7 +148,7 @@
                     </div>
                     <!-- Program 3: 沟通的艺术 -->
                     <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
-                        <h3 class="text-2xl font-bold text-gray-900 mb-4">沟通的艺术 (The Art of Communication)</h3>
+                        <h3 class="text-2xl font-bold text-gray-900 mb-4">沟通的艺术 (The Art of Connection)</h3>
                         <p class="text-gray-600 mb-6 flex-grow">专为华语专业人士设计，此课程将通过非暴力沟通的原则，提升您的沟通技巧，建立更和谐的人际与工作关系。</p>
                         <a href="gt.html" class="mt-auto inline-block text-blue-600 font-semibold hover:underline">了解更多 &rarr;</a>
                     </div>
@@ -216,35 +216,35 @@
     </footer>
 
     <script>
-        // --- Mobile Menu Toggle ---
-        const mobileMenuButton = document.getElementById('mobile-menu-button');
-        const mobileMenu = document.getElementById('mobile-menu');
+    // --- Mobile Menu Toggle ---
+    const mobileMenuButton = document.getElementById('mobile-menu-button');
+    const mobileMenu = document.getElementById('mobile-menu');
+
+    // 👇 ADD THIS CHECK to prevent the script from crashing if these elements aren't on the page.
+    if (mobileMenuButton && mobileMenu) {
         mobileMenuButton.addEventListener('click', () => {
             mobileMenu.classList.toggle('hidden');
         });
+    }
 
-        // --- Desktop Dropdown Menu Logic ---
-        document.addEventListener('click', e => {
-            const isDropdownButton = e.target.matches("[data-dropdown-button]");
-            // Ignore clicks inside dropdowns
-            if (!isDropdownButton && e.target.closest('[data-dropdown]') != null) return;
+    // --- Desktop Dropdown Menu Logic (This part is correct) ---
+    document.addEventListener('click', e => {
+        const isDropdownButton = e.target.matches("[data-dropdown-button]");
+        // Ignore clicks inside dropdowns
+        if (!isDropdownButton && e.target.closest('[data-dropdown]') != null) return;
 
-            let currentDropdown;
-            if (isDropdownButton) {
-                currentDropdown = e.target.closest('[data-dropdown]');
-                currentDropdown.querySelector('[data-dropdown-menu]').classList.toggle('hidden');
-            }
+        let currentDropdown;
+        if (isDropdownButton) {
+            currentDropdown = e.target.closest('[data-dropdown]');
+            currentDropdown.querySelector('[data-dropdown-menu]').classList.toggle('hidden');
+        }
 
-            // Close other open dropdowns
-            document.querySelectorAll("[data-dropdown-menu]:not(.hidden)").forEach(dropdownMenu => {
-                if (dropdownMenu.closest('[data-dropdown]') === currentDropdown) return;
-                dropdownMenu.classList.add('hidden');
-            });
+        // Close other open dropdowns
+        document.querySelectorAll("[data-dropdown-menu]:not(.hidden)").forEach(dropdownMenu => {
+            if (dropdownMenu.closest('[data-dropdown]') === currentDropdown) return;
+            dropdownMenu.classList.add('hidden');
         });
-
-        // NOTE: The FAQ section and its JavaScript have been removed from the homepage 
-        // to simplify the main page. It can be added to the more detailed 'about.html' page if needed.
-
-    </script>
+    });
+</script>
 </body>
 </html>
