--- a/index.html
+++ b/index.html
@@ -30,10 +30,6 @@
                 radial-gradient(at 33% 50%, hsla(222, 67%, 73%, 0.1) 0px, transparent 50%),
                 radial-gradient(at 79% 53%, hsla(343, 68%, 79%, 0.1) 0px, transparent 50%);
         }
-        /* Simple transition for dropdowns */
-        .dropdown-menu {
-            transition: opacity 0.3s ease, transform 0.3s ease;
-        }
     </style>
 </head>
 <body class="bg-gray-50 text-gray-800">
@@ -46,33 +42,9 @@
             </div>
             <!-- Desktop Menu -->
             <div class="hidden md:flex items-center space-x-8">
-                <a href="about.html" class="text-gray-600 hover:text-blue-600 transition duration-300">About Me</a>
-                
-                <!-- Training Programs Dropdown -->
-                <div class="relative" data-dropdown>
-                    <button class="flex items-center text-gray-600 hover:text-blue-600 transition duration-300" data-dropdown-button>
-                        <span>Training Programs</span>
-                        <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-                    </button>
-                    <div class="absolute hidden dropdown-menu bg-white shadow-lg rounded-md mt-2 py-2 w-56" data-dropdown-menu>
-                        <a href="ac.html" class="block px-4 py-2 text-gray-700 hover:bg-blue-50">The Art of Connection</a>
-                        <a href="ai.html" class="block px-4 py-2 text-gray-700 hover:bg-blue-50">AI for Office Productivity</a>
-                        <a href="gt.html" class="block px-4 py-2 text-gray-700 hover:bg-blue-50">沟通的艺术</a>
-                    </div>
-                </div>
-
-                <!-- Tools Dropdown -->
-                <div class="relative" data-dropdown>
-                    <button class="flex items-center text-gray-600 hover:text-blue-600 transition duration-300" data-dropdown-button>
-                        <span>Tools</span>
-                         <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
-                    </button>
-                    <div class="absolute hidden dropdown-menu bg-white shadow-lg rounded-md mt-2 py-2 w-56" data-dropdown-menu>
-                        <a href="arq.html" class="block px-4 py-2 text-gray-700 hover:bg-blue-50">Asking Right Questions</a>
-                        <a href="https://chatgpt.com/g/g-jXwWYgjvc-storytelling-coach" target="_blank" rel="noopener noreferrer" class="block px-4 py-2 text-gray-700 hover:bg-blue-50">Storytelling Coach GPT</a>
-                    </div>
-                </div>
-
+                <a href="#about" class="text-gray-600 hover:text-blue-600 transition duration-300">About Me</a>
+                <a href="#programs" class="text-gray-600 hover:text-blue-600 transition duration-300">Training Programs</a>
+                <a href="#tools" class="text-gray-600 hover:text-blue-600 transition duration-300">Tools</a>
                 <a href="#testimonials" class="text-gray-600 hover:text-blue-600 transition duration-300">Testimonials</a>
                 <a href="#contact" class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition duration-300">Let's Collaborate</a>
             </div>
@@ -85,18 +57,9 @@
         </nav>
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden px-6 pt-2 pb-4">
-            <a href="about.html" class="block py-2 text-gray-600 hover:text-blue-600">About Me</a>
-            <div class="py-2">
-                <h3 class="font-semibold text-gray-500">Training Programs</h3>
-                <a href="ac.html" class="block py-2 pl-4 text-gray-600 hover:text-blue-600">The Art of Connection</a>
-                <a href="ai.html" class="block py-2 pl-4 text-gray-600 hover:text-blue-600">AI for Office Productivity</a>
-                <a href="gt.html" class="block py-2 pl-4 text-gray-600 hover:text-blue-600">沟通的艺术</a>
-            </div>
-             <div class="py-2">
-                <h3 class="font-semibold text-gray-500">Tools</h3>
-                <a href="arq.html" class="block py-2 pl-4 text-gray-600 hover:text-blue-600">Asking Right Questions</a>
-                <a href="https://chatgpt.com/g/g-jXwWYgjvc-storytelling-coach" target="_blank" rel="noopener noreferrer" class="block py-2 pl-4 text-gray-600 hover:text-blue-600">Storytelling Coach GPT</a>
-            </div>
+            <a href="#about" class="block py-2 text-gray-600 hover:text-blue-600">About Me</a>
+            <a href="#programs" class="block py-2 text-gray-600 hover:text-blue-600">Training Programs</a>
+            <a href="#tools" class="block py-2 text-gray-600 hover:text-blue-600">Tools</a>
             <a href="#testimonials" class="block py-2 text-gray-600 hover:text-blue-600">Testimonials</a>
             <a href="#contact" class="block mt-2 bg-blue-600 text-white text-center px-4 py-2 rounded-md hover:bg-blue-700">Let's Collaborate</a>
         </div>
@@ -157,7 +120,7 @@
         </section>
 
         <!-- Tools & Resources Section -->
-        <section class="py-20 bg-white">
+        <section id="tools" class="py-20 bg-white">
             <div class="container mx-auto px-6">
                 <h2 class="text-3xl font-bold text-center text-gray-900 mb-12">Tools & Resources</h2>
                 <div class="grid md:grid-cols-2 gap-8 max-w-4xl mx-auto">
@@ -225,26 +188,7 @@
         mobileMenuButton.addEventListener('click', () => {
             mobileMenu.classList.toggle('hidden');
         });
-    }
-
-    // --- Desktop Dropdown Menu Logic (This part is correct) ---
-    document.addEventListener('click', e => {
-        const isDropdownButton = e.target.matches("[data-dropdown-button]");
-        // Ignore clicks inside dropdowns
-        if (!isDropdownButton && e.target.closest('[data-dropdown]') != null) return;
-
-        let currentDropdown;
-        if (isDropdownButton) {
-            currentDropdown = e.target.closest('[data-dropdown]');
-            currentDropdown.querySelector('[data-dropdown-menu]').classList.toggle('hidden');
-        }
-
-        // Close other open dropdowns
-        document.querySelectorAll("[data-dropdown-menu]:not(.hidden)").forEach(dropdownMenu => {
-            if (dropdownMenu.closest('[data-dropdown]') === currentDropdown) return;
-            dropdownMenu.classList.add('hidden');
-        });
-    });
+    }   
 </script>
 </body>
 </html>
