--- a/index.html
+++ b/index.html
@@ -75,22 +75,76 @@
             </div>
         </section>
 
-        <!-- About Section -->
-        <section id="about" class="py-20 bg-white">
-            <div class="container mx-auto px-6">
-                <div class="grid md:grid-cols-2 gap-16 items-center">
-                    <div class="flex justify-center items-center">
-                        <img src="assets/images/profile-photo.jpg" alt="Portrait of Elijah Ting" class="w-80 h-80 rounded-full object-cover border-4 border-white shadow-xl"> 
+       <section id="about" class="py-20 bg-white">
+    <div class="container mx-auto px-6">
+        
+        <div class="grid md:grid-cols-2 gap-16 items-center">
+            <div class="flex justify-center items-center">
+                <img src="assets/images/profile-photo.jpg" alt="Portrait of Elijah Ting" class="w-80 h-80 rounded-full object-cover border-4 border-white shadow-xl"> 
+            </div>
+            <div>
+                <h2 class="text-3xl font-bold text-gray-900 mb-4">Who is Elijah?</h2>
+                <p class="text-gray-600 mb-4">Elijah Ting is a corporate trainer and Train-the-Trainer facilitator focused on communication and adult learning.</p>
+                <p class="text-gray-600 mb-6">With extensive experience in both delivering and co-facilitating TTT programs, Elijah helps professionals, educators, and organizations level up their training capability and leadership impact.</p>
+                <a href="about.html" class="inline-block bg-blue-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300 shadow-md">Read My Full Bio</a>
+            </div>
+        </div>
+
+        <div class="mt-20">
+            <div class="bg-gray-100 p-8 rounded-lg shadow-md">
+                <h3 class="text-2xl font-bold text-gray-900 mb-6 text-center">Education & Qualifications</h3>
+                <div class="grid sm:grid-cols-2 gap-x-8 gap-y-6 max-w-4xl mx-auto">
+                    
+                    <div class="space-y-4">
+                        <h4 class="text-xl font-semibold text-gray-700 border-b pb-2">Education</h4>
+                        <div class="flex items-start">
+                            <svg class="w-6 h-6 text-blue-600 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 14l9-5-9-5-9 5 9 5z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 14l6.16-3.422A12.083 12.083 0 0121 12c0 6.627-5.373 12-12 12S3 18.627 3 12a12.083 12.083 0 012.84-6.422L12 14z"></path></svg>
+                            <div>
+                                <h5 class="font-semibold">Executive Master of Business Administration</h5>
+                                <p class="text-sm text-gray-500">Quantic School of Business and Technology, 2020</p>
+                            </div>
+                        </div>
+                        <div class="flex items-start">
+                             <svg class="w-6 h-6 text-blue-600 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v11.494m-9-8.994v10.994l9-5.5-9-5.5z"></path><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 12.253v8.994l-9 5.5-9-5.5V3.253l9 5.5 9-5.5z"></path></svg>
+                            <div>
+                                <h5 class="font-semibold">Master of Divinity</h5>
+                                <p class="text-sm text-gray-500">Methodist Theological School, 2003</p>
+                            </div>
+                        </div>
+                        <div class="flex items-start">
+                            <svg class="w-6 h-6 text-blue-600 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v4.517l1.557.778a2 2 0 01.89 1.789l.002 4.184a2 2 0 01-1.89 1.789l-1.557.778V20l-1 1H8l-1-1v-2.517l-1.557-.778a2 2 0 01-.89-1.789l-.002-4.184a2 2 0 011.89-1.789L8 10.517V5l-1-1z"></path></svg>
+                            <div>
+                                <h5 class="font-semibold">Bachelor of Science with Honours (Nursing)</h5>
+                                <p class="text-sm text-gray-500">Universiti Malaysia Sarawak, 2001</p>
+                            </div>
+                        </div>
                     </div>
-                    <div>
-                        <h2 class="text-3xl font-bold text-gray-900 mb-4">Who is Elijah?</h2>
-                        <p class="text-gray-600 mb-4">Elijah Ting is a corporate trainer and Train-the-Trainer facilitator focused on communication and adult learning.</p>
-                        <p class="text-gray-600 mb-6">With extensive experience in both delivering and co-facilitating TTT programs, Elijah helps professionals, educators, and organizations level up their training capability and leadership impact.</p>
-                        <a href="about.html" class="inline-block bg-blue-600 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300 shadow-md">Read My Full Bio</a>
+
+                    <div class="space-y-4">
+                        <h4 class="text-xl font-semibold text-gray-700 border-b pb-2">Professional Credentials</h4>
+                        <div class="flex items-start">
+                            <svg class="w-6 h-6 text-blue-600 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"></path></svg>
+                            <p class="font-semibold">HRD Corp Accredited Trainer (Malaysia)</p>
+                        </div>
+                        <div class="flex items-start">
+                            <svg class="w-6 h-6 text-blue-600 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"></path></svg>
+                            <p class="font-semibold">CERTIFIED FINANCIAL PLANNER™</p>
+                        </div>
+                        <div class="flex items-start">
+                            <svg class="w-6 h-6 text-blue-600 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"></path></svg>
+                            <p class="font-semibold">Certified Workplace Big Five Profile™ Consultant</p>
+                        </div>
+                        <div class="flex items-start">
+                            <svg class="w-6 h-6 text-blue-600 mr-3 mt-1 flex-shrink-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4M7.835 4.697a3.42 3.42 0 001.946-.806 3.42 3.42 0 014.438 0 3.42 3.42 0 001.946.806 3.42 3.42 0 013.138 3.138 3.42 3.42 0 00.806 1.946 3.42 3.42 0 010 4.438 3.42 3.42 0 00-.806 1.946 3.42 3.42 0 01-3.138 3.138 3.42 3.42 0 00-1.946.806 3.42 3.42 0 01-4.438 0 3.42 3.42 0 00-1.946-.806 3.42 3.42 0 01-3.138-3.138 3.42 3.42 0 00-.806-1.946 3.42 3.42 0 010-4.438 3.42 3.42 0 00.806-1.946 3.42 3.42 0 013.138-3.138z"></path></svg>
+                            <p class="font-semibold">Career Direct® Consultant</p>
+                        </div>
                     </div>
+
                 </div>
             </div>
-        </section>
+        </div>
+    </div>
+    </section>
 
         <!-- Programs Section -->
         <section id="programs" class="py-20 swoosh-bg">
