--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Elijah Ting | Corporate Trainer</title>
     <!-- Favicon Links -->
     <link rel="icon" type="image/png" href="/assets/favicons/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicons/favicon.svg" />
+    <link rel="icon" href="/assets/favicons/favicon.svg" type="image/svg+xml" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="/assets/favicons/favicon-dark.svg" type="image/svg+xml" media="(prefers-color-scheme: dark)">
     <link rel="shortcut icon" href="/assets/favicons/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png" />
     <link rel="manifest" href="/assets/favicons/site.webmanifest" />
