--- a/index.html
+++ b/index.html
@@ -146,6 +146,27 @@
     </div>
     </section>
 
+    <!-- Entrepreneurial Ventures Section -->
+    <section id="ventures" class="py-20 swoosh-bg">
+        <div class="container mx-auto px-6">
+            <h2 class="text-3xl font-bold text-center text-gray-900 mb-12">Entrepreneurial Ventures</h2>
+            <div class="grid md:grid-cols-2 gap-8 max-w-4xl mx-auto">
+                <!-- Wisdoer Global -->
+                <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col text-center">
+                    <h3 class="text-2xl font-bold text-gray-900 mb-4">Wisdoer Global</h3>
+                    <p class="text-gray-600 mb-6 flex-grow">As the founder of Wisdoer Global, I established a platform dedicated to professional development, which later evolved into a partnership.</p>
+                    <a href="https://wisdoer.com" target="_blank" rel="noopener noreferrer" class="mt-auto inline-block bg-blue-900 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300">Visit Wisdoer.com</a>
+                </div>
+                <!-- Kizuna Connect -->
+                <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col text-center">
+                    <h3 class="text-2xl font-bold text-gray-900 mb-4">Kizuna Connect</h3>
+                    <p class="text-gray-600 mb-6 flex-grow">I founded Kizuna Connect to build stronger, more empathetic connections in the workplace through specialized training and resources.</p>
+                    <a href="https://thekizuna.com" target="_blank" rel="noopener noreferrer" class="mt-auto inline-block bg-blue-900 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300">Visit TheKizuna.com</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    
         <!-- Programs Section -->
         <section id="programs" class="py-20 swoosh-bg">
             <div class="container mx-auto px-6">
