--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
                 <!-- Wisdoer Global -->
                 <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col text-center">
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Wisdoer Global</h3>
-                    <p class="text-gray-600 mb-6 flex-grow">As the founder of Wisdoer Global, I established a platform dedicated to professional development, which later evolved into a partnership.</p>
+                    <p class="text-gray-600 mb-6 flex-grow">As the founder of Wisdoer Global, Elijah established a platform dedicated to professional development, which later evolved into a partnership.</p>
                     <a href="https://wisdoer.com" target="_blank" rel="noopener noreferrer" class="mt-auto inline-block bg-blue-900 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300">Visit Wisdoer.com</a>
                 </div>
                 <!-- Kizuna Connect -->
                 <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col text-center">
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Kizuna Connect</h3>
-                    <p class="text-gray-600 mb-6 flex-grow">I founded Kizuna Connect to build stronger, more empathetic connections in the workplace through specialized training and resources.</p>
+                    <p class="text-gray-600 mb-6 flex-grow">Elijah founded Kizuna Connect to build stronger, more empathetic connections in the workplace through specialized training and resources.</p>
                     <a href="https://thekizuna.com" target="_blank" rel="noopener noreferrer" class="mt-auto inline-block bg-blue-900 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-700 transition duration-300">Visit TheKizuna.com</a>
                 </div>
             </div>
