Add link to nvc.my

--- a/index.html
+++ b/index.html
@@ -194,26 +194,28 @@
             </div>
         </section>
 
-        <!-- Tools & Resources Section -->
-        <section id="tools" class="py-20 bg-white">
-            <div class="container mx-auto px-6">
-                <h2 class="text-3xl font-bold text-center text-gray-900 mb-12">Tools & Resources</h2>
-                <div class="grid md:grid-cols-2 gap-8 max-w-4xl mx-auto">
-                    <!-- Tool 1: Asking Right Questions -->
-                    <div class="bg-blue-50 p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center">
-                        <h3 class="text-2xl font-bold text-gray-900 mb-4">Asking Right Questions Tool</h3>
-                        <p class="text-gray-600 mb-6 flex-grow">A practical guide to formulating powerful questions that unlock insight, drive clarity, and lead to better solutions.</p>
-                        <a href="arq.html" class="mt-auto inline-block bg-blue-900 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-900 transition duration-300">Explore the Tool</a>
-                    </div>
-                    <!-- Tool 2: Storytelling Coach GPT -->
-                    <div class="bg-blue-50 p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center">
-                        <h3 class="text-2xl font-bold text-gray-900 mb-4">Storytelling Coach GPT</h3>
-                        <p class="text-gray-600 mb-6 flex-grow">Elevate your narrative skills with personalized, AI-powered guidance on structure, delivery, and impact.</p>
-                        <a href="https://chatgpt.com/g/g-jXwWYgjvc-storytelling-coach" target="_blank" rel="noopener noreferrer" class="mt-auto inline-block bg-blue-900 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-900 transition duration-300">Start Coaching</a>
-                    </div>
-                </div>
+    <section id="tools" class="py-20 bg-white">
+    <div class="container mx-auto px-6">
+        <h2 class="text-3xl font-bold text-center text-gray-900 mb-12">Tools & Resources</h2>
+        <div class="grid md:grid-cols-3 gap-8 max-w-7xl mx-auto">
+            <div class="bg-blue-50 p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center">
+                <h3 class="text-2xl font-bold text-gray-900 mb-4">Asking Right Questions Tool</h3>
+                <p class="text-gray-600 mb-6 flex-grow">A practical guide to formulating powerful questions that unlock insight, drive clarity, and lead to better solutions.</p>
+                <a href="arq.html" class="mt-auto inline-block bg-blue-900 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-900 transition duration-300">Explore the Tool</a>
             </div>
-        </section>
+            <div class="bg-blue-50 p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center">
+                <h3 class="text-2xl font-bold text-gray-900 mb-4">Storytelling Coach GPT</h3>
+                <p class="text-gray-600 mb-6 flex-grow">Elevate your narrative skills with personalized, AI-powered guidance on structure, delivery, and impact.</p>
+                <a href="https://chatgpt.com/g/g-jXwWYgjvc-storytelling-coach" target="_blank" rel="noopener noreferrer" class="mt-auto inline-block bg-blue-900 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-900 transition duration-300">Start Coaching</a>
+            </div>
+            <div class="bg-blue-50 p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col items-center text-center">
+                <h3 class="text-2xl font-bold text-gray-900 mb-4">Nonviolent Communication</h3>
+                <p class="text-gray-600 mb-6 flex-grow">Learn the language of compassion to resolve conflicts peacefully and build deeper, more authentic connections.</p>
+                <a href="https://nvc.my" target="_blank" rel="noopener noreferrer" class="mt-auto inline-block bg-blue-900 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-900 transition duration-300">Discover NVC</a>
+            </div>
+        </div>
+    </div>
+    </section>
 
         <!-- Testimonials -->
         <section id="testimonials" class="py-20 swoosh-bg">
