--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section class="swoosh-bg py-20 md:py-32">
             <div class="container mx-auto px-6 text-center">
                 <h1 class="text-4xl md:text-6xl font-bold text-gray-900 leading-tight">Elijah Ting (Ting Moi Kieng)</h1>
-                <p class="mt-4 text-lg md:text-xl text-blue-900 font-semibold">Corporate Trainer & Train-the-Trainer Facilitator</p>
+                <p class="mt-4 text-lg md:text-xl text-blue-900 font-semibold">Corporate Trainer</p>
                 <p class="mt-2 text-md md:text-lg text-gray-600 max-w-3xl mx-auto">Specializing in Communication & Adult Learning, helping professionals and organizations level up their training capability and leadership impact.</p>
             </div>
         </section>
@@ -84,8 +84,8 @@
             </div>
             <div>
                 <h2 class="text-3xl font-bold text-gray-900 mb-4">Who is Elijah?</h2>
-                <p class="text-gray-600 mb-4">Elijah Ting is a corporate trainer and Train-the-Trainer facilitator focused on communication and adult learning.</p>
-                <p class="text-gray-600 mb-6">With extensive experience in both delivering and co-facilitating TTT programs, Elijah helps professionals, educators, and organizations level up their training capability and leadership impact.</p>
+                <p class="text-gray-600 mb-4">Elijah Ting is a corporate trainer focused on communication and adult learning.</p>
+                <p class="text-gray-600 mb-6">With extensive experience in training, Elijah helps professionals, educators, and organizations level up their training capability and leadership impact.</p>
                 <a href="about.html" class="inline-block bg-blue-900 text-white font-semibold px-6 py-3 rounded-lg hover:bg-blue-900 transition duration-300 shadow-md">Read My Full Bio</a>
             </div>
         </div>
