--- a/about.html
+++ b/about.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elijah Ting</title>
+    <title>Elijah Ting</title> 
+    <script src="https://cdn.tailwindcss.com"></script> 
     <!-- Favicon Links -->
     <link rel="icon" type="image/png" href="/assets/favicons/favicon-96x96.png" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicons/favicon.svg" />
