add google translator

--- a/lc.html
+++ b/lc.html
@@ -434,7 +434,8 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
-            <p>&copy; 2025 Ting Moi Kieng (Wisdoer Global). All Rights Reserved.</p>
+            <div id="google_translate_element" class="mb-4 inline-block"></div>
+            <p>&copy; 2025 Ting Moi Kieng. All Rights Reserved.</p>
             <p class="text-sm text-gray-400 mt-2">Your Partner in Corporate Leadership & Communication Development.</p>
         </div>
     </footer>
@@ -464,5 +465,14 @@
             });
         });
     </script>
+    
+    <!-- Google Translate Script -->
+    <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+    
 </body>
 </html>
