--- a/lc.html
+++ b/lc.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
-        <style>
         body {
             font-family: 'Inter', sans-serif;
         }
@@ -80,7 +79,7 @@
         #google_translate_element .goog-te-gadget-simple span {
             color: #4b5563;
         }
-        </style>
+    </style>
     
     <!-- Google Translate Script -->
     <script type="text/javascript">
@@ -105,6 +104,7 @@
                 <a href="#courses" class="text-gray-600 hover:text-blue-600">Training Pathway</a>
                 <a href="#contact" class="text-gray-600 hover:text-blue-600">Contact</a>
             </nav>
+            <div id="google_translate_element" class="hidden md:block"></div>
             <a href="#contact" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition duration-300">
                 Request a Proposal
             </a>
@@ -463,7 +463,6 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
-            <div id="google_translate_element" class="mb-4 inline-block"></div>
             <p>&copy; 2025 Ting Moi Kieng. All Rights Reserved.</p>
             <p class="text-sm text-gray-400 mt-2">Your Partner in Corporate Leadership & Communication Development.</p>
         </div>
