Update whole website

--- a/lc.html
+++ b/lc.html
@@ -59,9 +59,51 @@
         .toggle-item.open .icon-plus {
             transform: rotate(45deg);
         }
-    </style>
+        
+        /* Custom Google Translate Button Styles */
+        .goog-te-banner-frame.skiptranslate {
+            display: none !important;
+        } 
+        body {
+            top: 0px !important; 
+        }
+        #google_translate_element .goog-te-gadget-simple {
+            background-color: #fff !important;
+            border: 1px solid #d1d5db !important;
+            border-radius: 0.5rem !important;
+            padding: 0.5rem !important;
+            display: flex !important;
+            align-items: center !important;
+            cursor: pointer;
+            transition: background-color 0.2s;
+        }
+        #google_translate_element .goog-te-gadget-simple:hover {
+            background-color: #f3f4f6 !important;
+        }
+        #google_translate_element .goog-te-gadget-simple .goog-te-menu-value span {
+            color: #4b5563 !important;
+            font-weight: 500;
+            font-size: 0.875rem;
+        }
+        #google_translate_element .goog-te-gadget-simple img {
+            display: none !important;
+        }
+        /* Add our custom globe icon */
+        #google_translate_element .goog-te-gadget-simple::before {
+            content: '';
+            display: inline-block;
+            width: 1.25rem;
+            height: 1.25rem;
+            margin-right: 0.5rem;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='%234b5563'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M10.5 21l5.25-11.25L21 21m-9-3h7.5M3 5.621a48.474 48.474 0 016-.371m0 0c1.12 0 2.233.038 3.334.114M9 5.25V3m3.334 2.364C11.176 10.658 7.69 15.08 3 17.502m9.334-12.138c.896.061 1.785.147 2.666.257m-4.589 8.495a18.023 18.023 0 01-3.827-5.802' /%3E%3C/svg%3E");
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
 
-     <!-- Google Translate Script -->
+    </style>
+    
+    <!-- Google Translate Script -->
     <script type="text/javascript">
     function googleTranslateElementInit() {
       new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
@@ -80,15 +122,17 @@
                     elijah<span class="text-blue-600">.ac</span>
                 </a>
             </div>
-            <nav class="hidden md:flex space-x-8">
-                <a href="#why-training" class="text-gray-600 hover:text-blue-600">Why Invest?</a>
-                <a href="#courses" class="text-gray-600 hover:text-blue-600">Training Pathway</a>
-                <a href="#contact" class="text-gray-600 hover:text-blue-600">Contact</a>
-            </nav>
-            <div id="google_translate_element" class="hidden md:block"></div>
-            <a href="#contact" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition duration-300">
-                Request a Proposal
-            </a>
+            <div class="flex items-center space-x-4 md:space-x-8">
+                <nav class="hidden md:flex space-x-8">
+                    <a href="#why-training" class="text-gray-600 hover:text-blue-600">Why Invest?</a>
+                    <a href="#courses" class="text-gray-600 hover:text-blue-600">Training Pathway</a>
+                    <a href="#contact" class="text-gray-600 hover:text-blue-600">Contact</a>
+                </nav>
+                <div id="google_translate_element"></div>
+                <a href="#contact" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition duration-300 hidden sm:block">
+                    Request a Proposal
+                </a>
+            </div>
         </div>
     </header>
 
@@ -444,7 +488,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white py-8">
         <div class="container mx-auto px-6 text-center">
-            <p>&copy; 2025 Ting Moi Kieng. All Rights Reserved.</p>
+            <p>&copy; 2025 Ting Moi Kieng (Wisdoer Global). All Rights Reserved.</p>
             <p class="text-sm text-gray-400 mt-2">Your Partner in Corporate Leadership & Communication Development.</p>
         </div>
     </footer>
