--- a/lc.html
+++ b/lc.html
@@ -60,45 +60,12 @@
             transform: rotate(45deg);
         }
         
-        /* Custom Google Translate Button Styles */
+        /* Hides the default Google Translate banner */
         .goog-te-banner-frame.skiptranslate {
             display: none !important;
         } 
         body {
             top: 0px !important; 
-        }
-        #google_translate_element .goog-te-gadget-simple {
-            background-color: #fff !important;
-            border: 1px solid #d1d5db !important;
-            border-radius: 0.5rem !important;
-            padding: 0.5rem !important;
-            display: flex !important;
-            align-items: center !important;
-            cursor: pointer;
-            transition: background-color 0.2s;
-        }
-        #google_translate_element .goog-te-gadget-simple:hover {
-            background-color: #f3f4f6 !important;
-        }
-        #google_translate_element .goog-te-gadget-simple .goog-te-menu-value span {
-            color: #4b5563 !important;
-            font-weight: 500;
-            font-size: 0.875rem;
-        }
-        #google_translate_element .goog-te-gadget-simple img {
-            display: none !important;
-        }
-        /* Add our custom globe icon */
-        #google_translate_element .goog-te-gadget-simple::before {
-            content: '';
-            display: inline-block;
-            width: 1.25rem;
-            height: 1.25rem;
-            margin-right: 0.5rem;
-            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='%234b5563'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M10.5 21l5.25-11.25L21 21m-9-3h7.5M3 5.621a48.474 48.474 0 016-.371m0 0c1.12 0 2.233.038 3.334.114M9 5.25V3m3.334 2.364C11.176 10.658 7.69 15.08 3 17.502m9.334-12.138c.896.061 1.785.147 2.666.257m-4.589 8.495a18.023 18.023 0 01-3.827-5.802' /%3E%3C/svg%3E");
-            background-size: contain;
-            background-repeat: no-repeat;
-            background-position: center;
         }
 
     </style>
@@ -106,7 +73,7 @@
     <!-- Google Translate Script -->
     <script type="text/javascript">
     function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
     }
     </script>
     <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
@@ -128,7 +95,8 @@
                     <a href="#courses" class="text-gray-600 hover:text-blue-600">Training Pathway</a>
                     <a href="#contact" class="text-gray-600 hover:text-blue-600">Contact</a>
                 </nav>
-                <div id="google_translate_element"></div>
+                <!-- This div is necessary for the script to initialize but will not be visible -->
+                <div id="google_translate_element" style="display: none;"></div>
                 <a href="#contact" class="bg-blue-600 text-white font-semibold px-5 py-2 rounded-lg hover:bg-blue-700 transition duration-300 hidden sm:block">
                     Request a Proposal
                 </a>
