--- a/index.html
+++ b/index.html
@@ -171,24 +171,16 @@
         <section id="programs" class="py-20 swoosh-bg">
             <div class="container mx-auto px-6">
                 <h2 class="text-3xl font-bold text-center text-gray-900 mb-12">Signature Training Programs</h2>
-                <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- Program 1: The Art of Connection -->
+                <div class="grid md:grid-cols-2 lg:grid-cols-2 gap-8">
                     <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
-                        <h3 class="text-2xl font-bold text-gray-900 mb-4">The Art of Connection</h3>
-                        <p class="text-gray-600 mb-6 flex-grow">Master the core principles of Nonviolent Communication (NVC) to build trust, resolve conflicts, and foster genuine collaboration in the workplace.</p>
-                        <a href="ac.html" class="mt-auto inline-block text-blue-900 font-semibold hover:underline">Learn More &rarr;</a>
+                        <h3 class="text-2xl font-bold text-gray-900 mb-4">High-Performance Leadership & Communication</h3>
+                        <p class="text-gray-600 mb-6 flex-grow">Equip your managers and teams with the essential skills to lead with influence, resolve conflict, and drive business results through strategic communication.</p>
+                        <a href="leadership-communication.html" class="mt-auto inline-block text-blue-900 font-semibold hover:underline">Learn More &rarr;</a>
                     </div>
-                    <!-- Program 2: AI for Office Productivity -->
                     <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
                         <h3 class="text-2xl font-bold text-gray-900 mb-4">AI for Office Productivity</h3>
                         <p class="text-gray-600 mb-6 flex-grow">Harness the power of AI tools like ChatGPT to streamline workflows, enhance creativity, and boost efficiency in your daily office tasks.</p>
                         <a href="ai.html" class="mt-auto inline-block text-blue-900 font-semibold hover:underline">Learn More &rarr;</a>
-                    </div>
-                    <!-- Program 3: 沟通的艺术 -->
-                    <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
-                        <h3 class="text-2xl font-bold text-gray-900 mb-4">沟通的艺术 (The Art of Connection)</h3>
-                        <p class="text-gray-600 mb-6 flex-grow">专为华语专业人士设计，此课程将通过非暴力沟通的原则，提升您的沟通技巧，建立更和谐的人际与工作关系。</p>
-                        <a href="gt.html" class="mt-auto inline-block text-blue-900 font-semibold hover:underline">了解更多 &rarr;</a>
                     </div>
                 </div>
             </div>
