--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
                         <h3 class="text-2xl font-bold text-gray-900 mb-4">High-Performance Leadership & Communication</h3>
                         <p class="text-gray-600 mb-6 flex-grow">Equip your managers and teams with the essential skills to lead with influence, resolve conflict, and drive business results through strategic communication.</p>
-                        <a href="leadership-communication.html" class="mt-auto inline-block text-blue-900 font-semibold hover:underline">Learn More &rarr;</a>
+                        <a href="lc.html" class="mt-auto inline-block text-blue-900 font-semibold hover:underline">Learn More &rarr;</a>
                     </div>
                     <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
                         <h3 class="text-2xl font-bold text-gray-900 mb-4">AI for Office Productivity</h3>
