--- a/hthgv-poster.html
+++ b/hthgv-poster.html
@@ -114,9 +114,11 @@
 
             <footer class="mt-8">
                 <p class="mb-6 text-gray-200">這不僅是一門課程，更是一趟與神同行的旅程。<br>立即報名，開始學習聆聽那改變您一生的聲音。</p>
-                <button href="https://wa.me/message/DTN4ST4TTRBWG1" class="btn-cta font-bold py-3 px-8 rounded-full text-lg shadow-lg">
-                    了解更多 & 立即報名
-                </button>
+                <a href="https://wa.me/message/DTN4ST4TTRBWG1" target="_blank" rel="noopener noreferrer">
+                    <button class="btn-cta font-bold py-3 px-8 rounded-full text-lg shadow-lg">
+                        了解更多 & 立即報名
+                    </button>
+                </a>
             </footer>
 
         </div>
