--- a/hthgv.html
+++ b/hthgv.html
@@ -170,7 +170,9 @@
         </main>
 
         <footer class="text-center mt-16 border-t pt-8">
-            <p href="https://wa.me/message/DTN4ST4TTRBWG1" class="font-bold text-2xl gradient-text">立即開始您的聆聽之旅！</p>
+            <a href="https://wa.me/message/DTN4ST4TTRBWG1" target="_blank" rel="noopener noreferrer">
+                <p class="font-bold text-2xl gradient-text">立即開始您的聆聽之旅！</p>
+            </a>
             <p class="text-gray-500 mt-2">這不僅是一門課程，更是您與神關係升級的起點。</p>
         </footer>
 
