Revert about.html and hthgv-poster.htm;

--- a/hthgv-poster.html
+++ b/hthgv-poster.html
@@ -13,7 +13,7 @@
             font-family: 'Noto Sans TC', sans-serif;
         }
         .poster-container {
-            background: linear-gradient(135deg, #8e2de2 0%, #4a00e0 100%);
+            background: linear-gradient(135deg, #1c3b57 0%, #4a6a8a 100%);
             color: #ffffff;
             font-family: 'Noto Sans TC', sans-serif;
             min-height: 100vh;
@@ -34,18 +34,18 @@
         }
         .key-icon {
             font-size: 2rem;
-            color: #00f2ff;
-            text-shadow: 0 0 10px #00f2ff;
+            color: #FFD700;
+            text-shadow: 0 0 10px #FFD700;
         }
         .btn-cta {
-            background-color: #ff007f;
-            color: #ffffff;
+            background-color: #FFD700;
+            color: #1c3b57;
             transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(255, 0, 127, 0.4);
+            box-shadow: 0 4px 15px rgba(255, 215, 0, 0.3);
         }
         .btn-cta:hover {
             transform: translateY(-3px);
-            box-shadow: 0 6px 20px rgba(255, 0, 127, 0.6);
+            box-shadow: 0 6px 20px rgba(255, 215, 0, 0.5);
         }
     </style>
 </head>
