edit backgroud color for hthgv-poster.html

--- a/hthgv-poster.html
+++ b/hthgv-poster.html
@@ -13,7 +13,7 @@
             font-family: 'Noto Sans TC', sans-serif;
         }
         .poster-container {
-            background: linear-gradient(135deg, #1c3b57 0%, #4a6a8a 100%);
+            background-color: #005477;
             color: #ffffff;
             font-family: 'Noto Sans TC', sans-serif;
             min-height: 100vh;
@@ -23,7 +23,7 @@
             padding: 1rem;
         }
         .poster-card {
-            background-color: rgba(255, 255, 255, 0.05);
+            background-color: rgba(255, 255, 255, 0.1);
             border: 1px solid rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
@@ -55,9 +55,9 @@
         <div class="poster-card w-full max-w-2xl rounded-2xl shadow-2xl p-8 md:p-12 text-center">
 
             <header class="mb-8">
-                <p class="text-lg md:text-xl font-semibold text-gray-200 tracking-wider">一場改變生命的對話</p>
+                <p class="text-lg md:text-xl font-semibold text-gray-100 tracking-wider">一場改變生命的對話</p>
                 <h1 class="headline text-5xl md:text-7xl font-bold my-3 text-white">聆聽神聲音</h1>
-                <p class="text-lg md:text-xl font-semibold text-gray-200">您是否渴望，與神建立更親密的雙向關係？</p>
+                <p class="text-lg md:text-xl font-semibold text-gray-100">您是否渴望，與神建立更親密的雙向關係？</p>
             </header>
 
             <main class="my-10">
@@ -113,7 +113,7 @@
             </section>
 
             <footer class="mt-8">
-                <p class="mb-6 text-gray-200">這不僅是一門課程，更是一趟與神同行的旅程。<br>立即報名，開始學習聆聽那改變您一生的聲音。</p>
+                <p class="mb-6 text-gray-100">這不僅是一門課程，更是一趟與神同行的旅程。<br>立即報名，開始學習聆聽那改變您一生的聲音。</p>
                 <a href="https://wa.me/message/DTN4ST4TTRBWG1" target="_blank" rel="noopener noreferrer">
                     <button class="btn-cta font-bold py-3 px-8 rounded-full text-lg shadow-lg">
                         了解更多 & 立即報名
