Update characters and fonts

--- a/hthgv-poster.html
+++ b/hthgv-poster.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>聆聽神聲音</title>
+    <title>聆听神声音</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,6 +11,9 @@
     <style>
         body {
             font-family: 'Noto Sans TC', sans-serif;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+            text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
         }
         .poster-container {
             background-color: #005477;
@@ -55,68 +58,68 @@
         <div class="poster-card w-full max-w-2xl rounded-2xl shadow-2xl p-8 md:p-12 text-center">
 
             <header class="mb-8">
-                <p class="text-lg md:text-xl font-semibold text-gray-100 tracking-wider">一場改變生命的對話</p>
-                <h1 class="headline text-5xl md:text-7xl font-bold my-3 text-white">聆聽神聲音</h1>
-                <p class="text-lg md:text-xl font-semibold text-gray-100">您是否渴望，與神建立更親密的雙向關係？</p>
+                <p class="text-lg md:text-xl font-semibold text-gray-100 tracking-wider">一场改变生命的对话</p>
+                <h1 class="headline text-5xl md:text-7xl font-bold my-3 text-white">聆听神声音</h1>
+                <p class="text-lg md:text-xl font-semibold text-gray-100">您是否渴望，与神建立更亲密的双向关系？</p>
             </header>
 
             <main class="my-10">
-                <h2 class="text-2xl font-bold mb-6 border-b-2 border-yellow-400 inline-block pb-2">解鎖四把關鍵鑰匙</h2>
+                <h2 class="text-2xl font-bold mb-6 border-b-2 border-yellow-400 inline-block pb-2">解锁四把关键钥匙</h2>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-x-8 gap-y-6 text-left">
                     <div class="flex items-center space-x-4">
                         <div class="key-icon">🔑</div>
                         <div>
-                            <h3 class="font-bold text-lg">安靜</h3>
-                            <p class="text-gray-300 text-sm">在神的同在中，找到內心的平靜</p>
+                            <h3 class="font-bold text-lg">安静</h3>
+                            <p class="text-gray-300 text-sm">在神的同在中，找到内心的平静</p>
                         </div>
                     </div>
                     <div class="flex items-center space-x-4">
                         <div class="key-icon">🔑</div>
                         <div>
-                            <h3 class="font-bold text-lg">辨認</h3>
-                            <p class="text-gray-300 text-sm">學會分辨神的聲音與自己的思緒</p>
+                            <h3 class="font-bold text-lg">辨认</h3>
+                            <p class="text-gray-300 text-sm">学会分辨神的声音与自己的思绪</p>
                         </div>
                     </div>
                     <div class="flex items-center space-x-4">
                         <div class="key-icon">🔑</div>
                         <div>
-                            <h3 class="font-bold text-lg">看見</h3>
-                            <p class="text-gray-300 text-sm">開啟屬靈的視覺，領受從神而來的異象</p>
+                            <h3 class="font-bold text-lg">看见</h3>
+                            <p class="text-gray-300 text-sm">开启属灵的视觉，领受从神而来的异象</p>
                         </div>
                     </div>
                     <div class="flex items-center space-x-4">
                         <div class="key-icon">🔑</div>
                         <div>
-                            <h3 class="font-bold text-lg">日誌</h3>
-                            <p class="text-gray-300 text-sm">用日誌記錄與神的對話，深化您的領受</p>
+                            <h3 class="font-bold text-lg">日志</h3>
+                            <p class="text-gray-300 text-sm">用日志记录与神的对话，深化您的领受</p>
                         </div>
                     </div>
                 </div>
             </main>
 
             <section class="my-10 bg-white/10 p-6 rounded-lg">
-                <h3 class="text-xl font-bold mb-3">課程特色</h3>
+                <h3 class="text-xl font-bold mb-3">课程特色</h3>
                 <div class="flex flex-col md:flex-row justify-around items-center space-y-4 md:space-y-0">
                     <div class="text-center">
                         <p class="text-3xl font-black text-yellow-300">16</p>
-                        <p class="font-semibold">小時深度學習</p>
+                        <p class="font-semibold">小时深度学习</p>
                     </div>
                     <div class="text-center">
                         <p class="text-3xl font-black text-yellow-300">4</p>
-                        <p class="font-semibold">大互動單元</p>
+                        <p class="font-semibold">大互动单元</p>
                     </div>
                     <div class="text-center">
                         <p class="text-3xl font-black text-yellow-300">∞</p>
-                        <p class="font-semibold">生命轉化的機會</p>
+                        <p class="font-semibold">生命转化的机会</p>
                     </div>
                 </div>
             </section>
 
             <footer class="mt-8">
-                <p class="mb-6 text-gray-100">這不僅是一門課程，更是一趟與神同行的旅程。<br>立即報名，開始學習聆聽那改變您一生的聲音。</p>
+                <p class="mb-6 text-gray-100">这不仅是一门课程，更是一趟与神同行的旅程。<br>立即报名，开始学习聆听那改变您一生的声音。</p>
                 <a href="https://wa.me/message/DTN4ST4TTRBWG1" target="_blank" rel="noopener noreferrer">
                     <button class="btn-cta font-bold py-3 px-8 rounded-full text-lg shadow-lg">
-                        了解更多 & 立即報名
+                        了解更多 & 立即报名
                     </button>
                 </a>
             </footer>
