--- a/hthgv-poster.html
+++ b/hthgv-poster.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>聆听神声音</title>
+    <meta property="og:title" content="聆听神声音" />
+    <meta property="og:description" content="一场改变生命的对话。您是否渴望，与神建立更亲密的双向关系？" />
+    <meta property="og:image" content="https://www.elijah-ting.com/assets/images/profile-photo.jpg" />
+    <meta property="og:url" content="https://www.elijah-ting.com/hthgv-poster.html" />
+    <meta property="og:type" content="website" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
