--- a/index.html
+++ b/index.html
@@ -170,14 +170,13 @@
         <!-- Programs Section -->
         <section id="programs" class="py-20 swoosh-bg">
             <div class="container mx-auto px-6">
-                <h2 class="text-3xl font-bold text-center text-gray-900 mb-12">Leadership Development Programs</h2>
-                <div class="grid md:grid-cols-2 lg:grid-cols-2 gap-8">
+                <h2 class="text-3xl font-bold text-center text-gray-900 mb-12">Leadership Development Program</h2>
+                <div class="max-w-2xl mx-auto">
                     <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
-                        <h3 class="text-2xl font-bold text-gray-900 mb-4">High-Performance Leadership & Communication</h3>
+                        <h3 class="text-2xl font-bold text-gray-900 mb-4">High-Performance Leadership & Communication Program</h3>
                         <p class="text-gray-600 mb-6 flex-grow">Equip your managers and teams with the essential skills to lead with influence, resolve conflict, and drive business results through strategic communication.</p>
                         <a href="lc.html" class="mt-auto inline-block text-blue-900 font-semibold hover:underline">Learn More &rarr;</a>
                     </div>
-                    
                 </div>
             </div>
         </section>
