--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
                 <h2 class="text-3xl font-bold text-center text-gray-900 mb-12">Leadership Development Program</h2>
                 <div class="max-w-2xl mx-auto">
                     <div class="bg-white p-8 rounded-lg shadow-lg hover:shadow-xl transition-shadow duration-300 flex flex-col">
-                        <h3 class="text-2xl font-bold text-gray-900 mb-4">High-Performance Leadership & Communication Program</h3>
-                        <p class="text-gray-600 mb-6 flex-grow">Equip your managers and teams with the essential skills to lead with influence, resolve conflict, and drive business results through strategic communication.</p>
-                        <a href="lc.html" class="mt-auto inline-block text-blue-900 font-semibold hover:underline">Learn More &rarr;</a>
+                        <h3 class="text-2xl font-bold text-gray-900 mb-4">The Performance Dialogue Series</h3>
+                        <p class="text-gray-600 mb-6 flex-grow">Driving results through Accountable Communication. Transform difficult conversations into catalysts for performance and equip your leaders with a structured, repeatable process to foster a culture of trust, ownership, and relentless improvement.</p>
+                        <a href="ac.html" class="mt-auto inline-block text-blue-900 font-semibold hover:underline">Learn More &rarr;</a>
                     </div>
                 </div>
             </div>
